--- a/index.html
+++ b/index.html
@@ -8,56 +8,86 @@
 	<link rel="stylesheet" href="./assets/styles/normalize.css">
 </head>
 <body>
-
+<h1 class="visually-hidden">Alfa Repair Building</h1>
 <header class="header">
 	<div class="wrapper">
-		<div class="block">
-			<div class="block__row">
-				<div class="block__column">
-					<div class="block__item logo">
-						<a href="#">
-							<img src="./assets/images/logo.svg" width="300" height="60" alt="Логотип компании">
-						</a></div>
-				</div>
-				<div class="block__column">
-					<div class="block__item schedule">
-						<p>Пн-Сб: c 10:00 до 20:00<br>Выходной: воскресенье</p>
-					</div>
-				</div>
-				<div class="block__column">
-					<div class="block__item order-a-layout">
-						<a href="#"><img src="./assets/images/3d.svg" width="64" height="64" alt=""></a>
-						<p>Заказать <span class="num">3D</span>-макет дома</p>
-					</div>
-				</div>
-				<div class="block__column">
-					<div class="block__item contacts">
-						<a href="#"><img src="./assets/images/call.svg" alt="" width="70" height="70"></a>
-						<div class="sub-contacts">
-							<p>+7 (915) 168-55-50</p>
-							<div class="social-icon">
-								<a href="#"><img src="./assets/images/social-whatsapp.svg" alt=""></a>
-								<a href="#"><img src="./assets/images/social-telegram.svg" alt=""></a>
-								<a href="#"><img src="./assets/images/social-viber.svg" alt=""></a>
-							</div>
-						</div>
 
-					</div>
+		<div class="block__row">
+			<div class="block__column">
+				<div class="block__item logo">
+					<a href="#">
+						<img src="./assets/images/logo.svg" width="300" height="60" alt="Логотип компании">
+					</a></div>
+			</div>
+
+			<div class="block__column">
+				<div class="block__item schedule">
+					<p>Пн-Сб: c 10:00 до 20:00<br>Выходной: воскресенье</p>
 				</div>
-				<div class="block__column">
-					<div class="block__item button">
-						<button class="" type="button">Заказать звонок</button>
+			</div>
+
+			<div class="block__column">
+				<div class="block__item order-a-layout">
+					<a href="#"><img src="./assets/images/3d.svg" width="64" height="64" alt=""></a>
+					<p>Заказать <span class="num">3D</span>-макет дома</p>
+				</div>
+			</div>
+
+			<div class="block__column">
+				<div class="block__item contacts">
+					<a href="#"><img src="./assets/images/call.svg" alt="" width="70" height="70"></a>
+					<div class="sub-contacts">
+						<p>+7 (915) 168-55-50</p>
+						<div class="social-icon">
+							<a href="#"><img src="./assets/images/social-whatsapp.svg" alt=""></a>
+							<a href="#"><img src="./assets/images/social-telegram.svg" alt=""></a>
+							<a href="#"><img src="./assets/images/social-viber.svg" alt=""></a>
+						</div>
 					</div>
 				</div>
 			</div>
+
+			<div class="block__column">
+				<div class="block__item button">
+					<button class="" type="button">Заказать звонок</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="wrapper">
+			<ul class="nav">
+				<li><a href="#">Каталог домов</a></li>
+				<li><a href="#">Услуги</a></li>
+				<li><a href="#">О нас</a></li>
+				<li><a href="#">Контакты</a></li>
+				<li><a href="#">Блог</a></li>
+			</ul>
 		</div>
 	</div>
-
 </header>
+
+
 <main>
-	<h1 class="visually-hidden">Alfa Repair Building</h1>
+
 	<section class="request">
-		<h2 class="visually-hidden">Заявка на услугу</h2>
+		<div class="wrapper">
+			<h2 class="visually-hidden">Заявка на услугу</h2>
+			<p>Оставьте заявку на услугу<br><span>со скидкой 15%</span></p>
+			<p>Акция действительна до конца месяца!</p>
+
+			<form action="#" method="post">
+				<input type="text" placeholder="Ваше имя" required>
+				<select name="service" id="">
+					<option value="">Ремонт кровли</option>
+					<option value="">Замена кровли</option>
+					<option value="">Установка стеклопакетов</option>
+					<option value="">Демонтаж труб</option>
+				</select>
+				<input type="tel" placeholder="Номер телефона" required>
+				<button type="submit">Отправить</button>
+				<p>Ваши данные не будут переданы третьим лицам</p>
+			</form>
+		</div>
 	</section>
 
 	<section class="services">
