--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
 			<div class="block__column">
 				<div class="block__item order-a-layout">
-					<a href="#"><img src="./assets/images/3d.svg" width="64" height="64" alt=""></a>
+					<a href="#"><img src="./assets/images/layout.svg" width="64" height="64" alt=""></a>
 					<p>Заказать <span class="num">3D</span>-макет дома</p>
 				</div>
 			</div>
 
 			<div class="block__column">
 				<div class="block__item contacts">
-					<a href="#"><img src="./assets/images/call.svg" alt="" width="70" height="70"></a>
+					<a href="#"><img src="./assets/images/call.svg" alt="" width="64" height="64"></a>
 					<div class="sub-contacts">
 						<p>+7 (915) 168-55-50</p>
 						<div class="social-icon">
@@ -87,6 +87,19 @@
 				<button type="submit">Отправить</button>
 				<p>Ваши данные не будут переданы третьим лицам</p>
 			</form>
+
+			<img class="gift-big" src="./assets/images/gift.svg" width="177" height="141" alt="">
+			<img class="gift-small" src="./assets/images/gift.svg" width="90" height="75" alt="">
+			<img class="spatula" src="./assets/images/spatula.svg" width="140" height="140" alt="">
+
+			<aside class="sidebar">
+				<ul>
+					<li><a href="#"><img src="assets/images/1.svg" height="40" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/2.svg" height="40" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/3.svg" height="40" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/4.svg" height="40" alt=""></a></li>
+				</ul>
+			</aside>
 		</div>
 	</section>
 
