--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./assets/styles/normalize.css">
 </head>
 <body>
+<!--<iframe src="index.html" width="150" height="450" scrolling="yes"></iframe>-->
 <h1 class="visually-hidden">Alfa Repair Building</h1>
 <header class="header">
 	<div class="wrapper">
@@ -104,11 +105,24 @@
 	</section>
 
 	<section class="services">
-		<h2>Наши услуги</h2>
+		<div class="wrapper">
+			<h2>Наши услуги</h2>
+			<div class="block-left">
+				<p><img src="./assets/images/s2-l1.svg" width="30" height="30" alt="">Проектирование домов</p>
+				<p><img src="./assets/images/s2-l2.svg" width="30" height="30" alt="">Установка автономной канализации</p>
+				<p><img src="./assets/images/s2-l3.svg" width="30" height="30" alt="">Разводка водоснабжения</p>
+				<p><img src="./assets/images/s2-l4.svg" width="30" height="30" alt="">Разводка канализации</p>
+			</div>
+			<img class="house-line" src="./assets/images/house-line.svg" width="674" height="498" alt="">
+		</div>
 	</section>
 
 	<section class="feedback">
-		<h2 class="visually-hidden">Обратная связь</h2>
+		<div class="wrapper">
+			<h2 class="visually-hidden">Обратная связь</h2>
+
+		</div>
+
 	</section>
 </main>
 
