--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 	</section>
 
 	<section class="services">
-		<div class="wrapper">
-			<h2>Наши услуги</h2>
+		<h2>Наши услуги</h2>
+		<div class="wrapper-services">
 			<div class="block-left">
 				<p><img src="./assets/images/s2-l1.svg" width="30" height="30" alt="">Проектирование домов</p>
 				<p><img src="./assets/images/s2-l2.svg" width="30" height="30" alt="">Установка автономной канализации</p>
@@ -114,6 +114,14 @@
 				<p><img src="./assets/images/s2-l4.svg" width="30" height="30" alt="">Разводка канализации</p>
 			</div>
 			<img class="house-line" src="./assets/images/house-line.svg" width="674" height="498" alt="">
+			<div class="block-right">
+				<p><img src="./assets/images/s2-r1.svg" width="30" height="30" alt="">Проектирование домов</p>
+				<p><img src="./assets/images/s2-r2.svg" width="30" height="30" alt="">Установка автономной канализации</p>
+				<p><img src="./assets/images/s2-r3.svg" width="30" height="30" alt="">Разводка водоснабжения</p>
+				<p><img src="./assets/images/s2-r4.svg" width="30" height="30" alt="">Разводка канализации</p>
+			</div>
+			<img class="well" src="./assets/images/well.svg" width="212" height="498" alt="">
+
 		</div>
 	</section>
 
