--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Alfa Repair Building</title>
+	<title>Building Company</title>
 	<link rel="stylesheet" href="./assets/styles/style.css">
 	<link rel="stylesheet" href="./assets/styles/normalize.css">
 </head>
 <body>
-<h1 class="visually-hidden">Alfa Repair Building</h1>
+<h1 class="visually-hidden">Building Company</h1>
 <header class="header">
 
 	<div class="wrapper">
