--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Building Company</title>
 	<link rel="stylesheet" href="./assets/styles/style.css">
@@ -158,7 +157,7 @@
 				</label>
 				<p>Если у вас есть изображение или макет дома, который вам нужен,
 					пришлите его нам. Мечты должны сбываться!<br> И мы, знаем, как исполнить вашу!</p>
-				<input class="file" type="file" name="project-house" multiple placeholder="Прикрепить файл">
+				<input class="file" type="file" name="project-house" multiple>
 				<label>
 					<input class="submit" type="submit" value="Отправить">
 				</label>
